// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getClientEnvVars doesn't leak internal vars 1`] = `
Object {
  "DEPLOY_ENV": "test",
  "NODE_ENV": "test",
  "VISIBLE_TOKEN": "visible",
}
`;

exports[`getClientEnvVars only includes vars which start with urc.clientEnvPrefix  1`] = `
Object {
  "DEPLOY_ENV": "test",
  "MY_APP_TOKEN": "visible",
  "NODE_ENV": "test",
}
`;

exports[`normalizes empty configuration 1`] = `
Urc {
  "clientEnvPrefix": "",
  "devServerHistoryFallback": false,
  "hot": false,
  "htmlSource": [Function],
  "jsEntry": "/fake-volume/src/entry.js",
  "liveReload": false,
  "mode": "development",
  "modernBrowserTest": "'fetch' in window && 'assign' in Object",
  "outputDirectory": "/fake-volume/_underreact-site",
  "polyfill": "<PROJECT_ROOT>/polyfill/index.js",
  "port": 8080,
  "postcssPlugins": Array [],
  "production": false,
  "publicAssetsPath": "/underreact-assets",
  "publicDirectory": "/fake-volume/public",
  "rootDirectory": "/fake-volume",
  "siteBasePath": "",
  "stats": undefined,
  "stylesheets": Array [],
  "underreactRoot": "<PROJECT_ROOT>",
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [],
  "webpackPlugins": Array [],
}
`;

exports[`normalizes fancy configuration 1`] = `
Urc {
  "clientEnvPrefix": "",
  "devServerHistoryFallback": false,
  "hot": false,
  "htmlSource": [Function],
  "jsEntry": "/fake-volume/src/entry.js",
  "liveReload": false,
  "mode": "development",
  "modernBrowserTest": "'fetch' in window && 'assign' in Object",
  "outputDirectory": "/fake-volume/_underreact-site",
  "polyfill": "<PROJECT_ROOT>/polyfill/index.js",
  "port": 8080,
  "postcssPlugins": Array [],
  "production": false,
  "publicAssetsPath": "/cacheable-things",
  "publicDirectory": "/fake-volume/public",
  "rootDirectory": "/fake-volume",
  "siteBasePath": "/fancy",
  "stats": undefined,
  "stylesheets": Array [
    "<PROJECT_ROOT>/lib/config/src/bg.css",
  ],
  "underreactRoot": "<PROJECT_ROOT>",
  "vendorModules": Array [],
  "webpackConfigTransform": [Function],
  "webpackLoaders": Array [
    Object {
      "test": /\\\\\\.less\\$/,
      "use": Array [
        "css-loader",
        "less-loader",
      ],
    },
  ],
  "webpackPlugins": Array [
    [Function],
  ],
}
`;

exports[`not setting polyfill fallbacks to default path 1`] = `"<PROJECT_ROOT>/polyfill/index.js"`;
